Fix login logo cropping

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -51,7 +51,17 @@ body.login #nav a:hover,
 body.login #backtoblog a:hover{text-decoration: underline; color: #000 !important;}
 body.login #lostpasswordform,
 body.login #loginform{margin-bottom: 20px;}
-body.login #login h1 a{background: transparent url('../img/login-logo.png') no-repeat 50% 0; text-indent: 0; text-align: center; text-decoration: none; padding-top: 92px; height: inherit; font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif"; color: #333;}
+body.login #login h1 a {
+  background: transparent url('../img/login-logo.png') no-repeat 50% 0;
+  text-indent: 0;
+  text-align: center;
+  text-decoration: none;
+  padding-top: 92px;
+  width: 238px;
+  height: inherit;
+  font-family: "Helvetica Neue", "Helvetica", "Arial", "sans-serif";
+  color: #333;
+}
 body.login #login h1 a:hover{color: #555;}
 body.login #login h1 a .hide{display: block;}
 
